--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
   </tr>
 </table>
 <hr size="3"noshade>
-<strong><a href="contact-info.html">Contact me</a></strong>
+<strong><a href="https://github.com/Mohammed-25/cv/blob/main/contact-info.html">Contact me</a></strong>
   </body>
 </html>
